--- a/containers/testimonies.module.scss
+++ b/containers/testimonies.module.scss
@@ -1,3 +1,5 @@
+@import "../styles/common";
+
 .list {
   padding: 0;
 }
@@ -11,8 +13,35 @@
 }
 
 .quotation {
-  margin: 0;
+  color: $gray-mid;
   padding: 1em;
-  background-color: #c7c7c7;
+  background-color: $gray-bleached;
   border-radius: 10px;
+  position: relative;
+  margin: 0 0 10px 0;
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -20px;
+    width: 0;
+    height: 0;
+    border-top: 10px solid $gray-bleached;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+  }
+  &>*:first-child {
+    margin-top: 0;
+  }
+  &>*:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.source {
+  margin-top: 1em;
+  margin-bottom: 2em;
+  font-style: italic;
+  color: $gray-light;
 }
