--- a/containers/testimonies.module.scss
+++ b/containers/testimonies.module.scss
@@ -18,7 +18,7 @@
   background-color: $gray-bleached;
   border-radius: 10px;
   position: relative;
-  margin: 0 0 10px 0;
+  margin: 0;
   &:after {
     content: "";
     display: block;
