--- a/src/containers/sermon/detail.module.scss
+++ b/src/containers/sermon/detail.module.scss
@@ -1,31 +1,30 @@
 .meta {
-  display: flex;
-  align-items: center;
-  margin-bottom: 1rem;
-  img {
-    flex: 0 0 50px;
-    margin-right: .75rem;
-    border-radius: 100%;
-  }
-  h1 {
-    margin: 0;
-  }
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	img {
+		flex: 0 0 50px;
+		margin-right: 0.75rem;
+		border-radius: 100%;
+	}
+	h1 {
+		margin: 0;
+	}
 }
 
-.speakers  {
-  margin: 0;
-  padding-left: 0;
-  li {
-    display: inline;
-    list-style-type: none;
-    font-style: italic;
-    opacity: .5;
-  }
-  li:after {
-    content: ", ";
-  }
-  li:last-child:after {
-    content: "";
-  }
+.speakers {
+	margin: 0;
+	padding-left: 0;
+	li {
+		display: inline;
+		list-style-type: none;
+		font-style: italic;
+		opacity: 0.5;
+	}
+	li:after {
+		content: ', ';
+	}
+	li:last-child:after {
+		content: '';
+	}
 }
-
