--- a/src/components/molecules/searchEntry.module.scss
+++ b/src/components/molecules/searchEntry.module.scss
@@ -1,7 +1,8 @@
 .entry {
   border: 1px solid grey;
   padding: 1em;
-  margin: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
   & > * {
     margin: 0;
   }
