--- a/src/containers/search.module.scss
+++ b/src/containers/search.module.scss
@@ -4,3 +4,16 @@
     list-style-type: none;
   }
 }
+
+.filters {
+  border: 1px solid gray;
+  float: right;
+  background-color: white;
+  padding: 1em;
+  & > *:first-child {
+    margin-top: 0;
+  }
+  & > *:last-child {
+    margin-bottom: 0;
+  }
+}
