--- a/src/components/molecules/recordingList.module.scss
+++ b/src/components/molecules/recordingList.module.scss
@@ -1,22 +1,4 @@
-.list {
-  padding-left: 0;
-}
-
-.item {
-  list-style-type: none;
-  margin-bottom: 0.5em;
-  a {
-    display: flex;
-    align-items: center;
-  }
-  img {
-    flex-grow: 0;
-    flex-shrink: 0;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    margin-right: 1em;
-    overflow: hidden;
-    border-radius: 100%;
-  }
+.table {
+  border-collapse: separate;
+  border-spacing: .5rem;
 }
