style recording list

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,6 +4,6 @@ $gray-mid: #262627;
 $gray-light: #747474;
 $gray-lighter: #dbdbdb;
 $gray-lightest: #e5e5e5;
-$gray-bleached: #eee;
+$gray-bleached: #f5f5f5;
 
 $accent: #3da88e;
