--- a/src/components/molecules/recordingListEntry.module.scss
+++ b/src/components/molecules/recordingListEntry.module.scss
@@ -1,14 +1,34 @@
+@import '../../styles/common';
+
 .item {
   margin-bottom: 0.5em;
-  align-items: center;
-
+  color: $gray-light;
+  &:nth-child(even) {
+    background-color: $gray-bleached;
+  }
+  td {
+    padding: 0 .7rem 0 0;
+    &:first-child {
+      padding-left: .7rem;
+    }
+  }
   a {
-    align-items: center;
+    color: $gray-light;
+    text-decoration: none;
+    &.title {
+      display: block;
+      padding: 1rem 0 1rem 0;
+      font-weight: bold;
+      color: $gray-mid;
+    }
+    &:hover {
+      text-decoration: underline;
+    }
   }
   img {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     overflow: hidden;
     border-radius: 100%;
   }
@@ -16,7 +36,8 @@
 
 .presenters {
   ul {
-    padding-left: 0;
+    padding: 0;
+    margin: 0;
   }
   li {
     display: inline-block;
