style header according to T&S

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,6 +4,8 @@ $gray-mid: #262627;
 $gray-light: #747474;
 $gray-lighter: #dbdbdb;
 $gray-lightest: #e5e5e5;
-$gray-bleached: #f5f5f5;
+
+// taken from T&S Figma 5/14/2021, sidebar border line
+$gray-bleached: #cdd9e3;
 
 $accent: #3da88e;
