--- a/src/components/organisms/header.module.scss
+++ b/src/components/organisms/header.module.scss
@@ -1,13 +1,36 @@
 @import '../../styles/common';
 
 .header {
-	background-color: $gray-dark;
-	color: $gray-bleached;
 	overflow: hidden;
-	margin-bottom: 2rem;
-	padding-bottom: 2rem;
-	padding-top: 2rem;
+	float: left;
+	padding: 1.5rem;
+	display: flex;
+	flex-direction: column;
 	h1 {
 		margin-top: 0;
 	}
+	ul {
+		padding-left: 0;
+		flex-grow: 1;
+	}
+	li {
+		list-style-type: none;
+		margin-bottom: 2rem;
+		display: flex;
+		align-items: center;
+		color: rgba(0, 0, 0, 0.5);
+		img {
+			margin-right: 0.5em;
+		}
+	}
+}
+
+.logo {
+	margin-bottom: 2rem;
+}
+
+.user {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
