--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,9 @@
 $gray-night: #1c1c1d;
 $gray-dark: #242426;
-$gray-mid: #262627;
+
+// taken from T&S Figma 5/19/2021, marketing home section bg
+$gray-mid: #323e48;
+
 $gray-light: #747474;
 $gray-lighter: #dbdbdb;
 $gray-lightest: #e5e5e5;
