--- a/src/components/molecules/speakerName.module.scss
+++ b/src/components/molecules/speakerName.module.scss
@@ -1,3 +1,18 @@
+.link {
+	display: inline-flex;
+	align-items: center;
+	text-decoration: none;
+	&:hover {
+		text-decoration: underline;
+	}
+	img {
+		border-radius: 100%;
+		height: 32px;
+		width: 32px;
+		margin-right: 0.5em;
+	}
+}
+
 .tooltip {
 	max-width: 300px;
 	opacity: 1 !important;
