--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,19 +19,21 @@ html {
 	}
 }
 
-@import 'common';
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-family: serif;
+}
+
+a {
+	color: inherit;
+	&:hover {
+		text-decoration: none;
+	}
+}
 
 p {
 	line-height: 1.3em;
-}
-
-.template-base {
-	display: flex;
-	> *:first-child {
-		flex: 0 0 200px;
-		border-right: 0.5px solid $gray-bleached;
-	}
-	> * {
-		flex: 1 0 100%;
-	}
 }
