--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@ body,
 .template-base {
 	padding: 0;
 	margin: 0;
-	min-height: 100vh;
+	height: 100vh;
 	/*font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,*/
 	/*	Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;*/
 }
