--- a/src/components/organisms/section.module.scss
+++ b/src/components/organisms/section.module.scss
@@ -12,8 +12,10 @@
 
 .media {
 	grid-area: media;
-	img {
-		max-width: 100%;
+	& > img {
+		object-fit: cover;
+		width: 100%;
+		height: 100%;
 		display: block;
 	}
 }
