--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -12,3 +12,25 @@ $gray-lightest: #e5e5e5;
 $gray-bleached: #cdd9e3;
 
 $accent: #3da88e;
+
+// T&S Named Colors
+$ts-dark: #323e48;
+$ts-lightTone: #cdd9e3;
+
+.button {
+	border-radius: 4px;
+	border-color: $ts-dark;
+	border-width: 0.5px;
+	border-style: solid;
+	padding: 8px;
+	text-decoration: none;
+	display: inline-block;
+	background-color: white;
+	cursor: pointer;
+	&.primary {
+		background: #ff224a;
+		color: white;
+		box-shadow: 0 4px 10px 0 #00000026;
+		border-width: 0;
+	}
+}
