code review fixes

--- a/src/components/molecules/card.module.scss
+++ b/src/components/molecules/card.module.scss
@@ -58,6 +58,13 @@
 	}
 }
 
+.speakers {
+	& > * {
+		display: flex;
+		margin-bottom: 0.5em;
+	}
+}
+
 .controls {
 	display: flex;
 	align-items: center;
