--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -37,4 +37,11 @@ $ts-salmon: #ff6e6e;
 		box-shadow: 0 4px 10px 0 #00000026;
 		border-width: 0;
 	}
+	&.square {
+		aspect-ratio: 1/1;
+		display: block;
+		& > * {
+			display: block;
+		}
+	}
 }
