--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -5,18 +5,11 @@
 	align-items: center;
 	padding: 2rem;
 	justify-content: space-between;
+	color: $ts-dark;
 }
 
 .nav {
 	& > * {
 		margin-left: 1rem;
-	}
-}
-
-.languages {
-	display: inline-flex;
-	align-items: center;
-	& > * {
-		margin-left: 0.5rem;
 	}
 }
