--- a/src/components/organisms/testimonies.module.scss
+++ b/src/components/organisms/testimonies.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/common";
+
 .testimony {
 	align-self: stretch;
 	display: flex;
@@ -13,8 +15,7 @@
 }
 
 .author {
-	// TODO: Update with specific serif font; DRY
-	font-family: serif;
+	font-family: $headingFont;
 	font-style: normal;
 	font-weight: bold;
 }
