--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
+// START INTER FONT
+
+// TODO: Extract into separate file
+
 @use "~inter-ui/default" with (
   $inter-font-display: swap,
   $inter-font-path: '~inter-ui/Inter (web)'
@@ -20,6 +24,8 @@ html {
 	}
 }
 
+// END INTER FONT
+
 @import './common.scss';
 
 * {
@@ -41,7 +47,7 @@ h2,
 h3,
 h4,
 h5 {
-	font-family: serif;
+	font-family: $headingFont;
 }
 
 a {
