code review fixes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -87,7 +87,7 @@ p {
 .MuiButton-root.MuiButton-contained.MuiButton-containedPrimary {
 	border-radius: 4px;
 	padding: 8px;
-	background-color: #ff224a;
+	background-color: $ts-red;
 	color: white;
 	box-shadow: 0 4px 10px 0 #00000026;
 }
