--- a/src/pages/_app.module.scss
+++ b/src/pages/_app.module.scss
@@ -2,11 +2,13 @@
 
 .base {
 	display: flex;
+	min-height: 100vh;
 }
 
 .header {
 	flex: 0 0 200px;
 	border-right: 0.5px solid $gray-bleached;
+	display: flex;
 }
 
 .content {
