code review fixes

--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -34,14 +34,16 @@
 	h5 {
 		margin-top: 0;
 		margin-bottom: 0;
+		font-size: 18px;
 	}
 	ul {
 		padding-left: 0;
 		margin-top: 0.5rem;
+		margin-bottom: 0;
 	}
 	li {
 		list-style-type: none;
-		font-size: 0.7em;
+		font-size: 14px;
 	}
 	a {
 		text-decoration: none;
