remove discover grid tab outline

--- a/src/components/atoms/lineHeading.module.scss
+++ b/src/components/atoms/lineHeading.module.scss
@@ -5,6 +5,7 @@
 	font-size: 16px;
 	text-transform: uppercase;
 	display: flex;
+	letter-spacing: 0.1em;
 	&:after {
 		display: block;
 		content: '';
@@ -12,5 +13,6 @@
 		border-bottom: 1px solid $ts-red;
 		flex-grow: 1;
 		top: -4px;
+		left: 2px;
 	}
 }
