--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,10 @@ html {
 	box-sizing: border-box;
 }
 
+html {
+	font-size: 14px;
+}
+
 html,
 body,
 #__next,
@@ -49,7 +53,9 @@ h4 {
 	font-family: $headingFont;
 }
 
-h5 {
+h6 {
+	font-size: 10px;
+	text-transform: uppercase;
 }
 
 a {
@@ -92,4 +98,12 @@ p {
 	background-color: $ts-red;
 	color: white;
 	box-shadow: 0 4px 10px 0 #00000026;
+}
+
+/* Video.js Customizations */
+
+.video-js {
+	border: 15px solid red;
+	.vjs-poster {
+	}
 }
