--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -3,6 +3,18 @@
 .waves {
 	position: relative;
 	display: table;
+	input {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		width: 100%;
+		z-index: 500;
+		margin: 0;
+		opacity: 0;
+		cursor: pointer;
+	}
 	path {
 		stroke: $ts-red;
 	}
@@ -13,9 +25,10 @@
 		top: 0;
 		right: 0;
 		bottom: 0;
-		width: 150px;
+		width: calc(100% - var(--progress, 0%));
 		z-index: 100;
 		backdrop-filter: grayscale(100%);
 		background-color: rgba(255, 255, 255, 0.85);
+		pointer-events: none;
 	}
 }
