--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/common';
 
 .base {
-	border-radius: 24px 24px 0 0;
+	border-radius: 24px;
 	overflow: hidden;
 	border: 1px solid $ts-cream;
 }
