--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -1,5 +1,11 @@
 @import '../../styles/common';
 
+.audio {
+}
+
+.video {
+}
+
 .waves {
 	position: relative;
 	background-image: url('/img/waves.svg');
