--- a/src/components/molecules/player.module.scss
+++ b/src/components/molecules/player.module.scss
@@ -6,7 +6,21 @@
 .video {
 }
 
+.controls {
+	display: flex;
+	button {
+		flex: 0 0 auto;
+		background: none;
+		border: none;
+		color: $ts-red;
+		svg {
+			font-size: 4rem;
+		}
+	}
+}
+
 .waves {
+	flex-grow: 1;
 	position: relative;
 	background-image: url('/img/waves.svg');
 	height: 50px;
@@ -37,5 +51,12 @@
 		backdrop-filter: grayscale(100%);
 		background-color: rgba(255, 255, 255, 0.85);
 		pointer-events: none;
+	}
+}
+
+.skip {
+	button {
+		background: none;
+		border: none;
 	}
 }
