--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -21,7 +21,15 @@
 	h1 {
 		margin-top: 0;
 		margin-bottom: 0.5rem;
+		font-weight: 700;
+		font-size: 44px;
 	}
+}
+
+.part {
+	color: $ts-red;
+	font-weight: 600;
+	font-size: 16px;
 }
 
 .speakers {
