work on player, miniplayer

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -40,3 +40,13 @@
 		margin-right: 1rem;
 	}
 }
+
+.sequenceNav {
+	overflow: hidden;
+	.previous {
+		float: left;
+	}
+	.next {
+		float: right;
+	}
+}
