work on miniplayer

--- a/src/components/templates/andSidebar.module.scss
+++ b/src/components/templates/andSidebar.module.scss
@@ -2,16 +2,17 @@
 
 .base {
 	display: flex;
-	min-height: 100vh;
+	align-items: stretch;
 }
 
 .header {
 	flex: 0 0 200px;
-	border-right: 0.5px solid $gray-bleached;
 	display: flex;
+	overflow: scroll;
 }
 
 .content {
 	flex: 0 0 calc(100% - 200px);
 	padding: 2rem;
+	overflow: scroll;
 }
