work on miniplayer

--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/common';
 
 .base {
-	max-height: 100vh;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
