--- a/src/components/atoms/progressBar.module.scss
+++ b/src/components/atoms/progressBar.module.scss
@@ -1,13 +1,39 @@
-.progress {
-	border-bottom: 1px solid #cdd9e3;
-	flex: 1 1 100%;
-	margin-left: 1em;
-	margin-right: 1em;
+@import "../../styles/common";
 
-	span {
-		margin-bottom: -1px;
+.progress {
+	display: grid;
+	grid-template-areas: "cell";
+
+	&:before {
+		grid-area: cell;
+		content: "";
 		display: block;
-		border-bottom: 1px solid var(--progressColor, #ff224a);
-		width: var(--progress, 0);
+		background-color: #cdd9e3;
+		height: 2px;
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+
+	&:after {
+		grid-area: cell;
+		content: "";
+		display: block;
+		background-color: var(--progressColor, $ts-red);
+		height: 2px;
+		width: var(--progress, 0%);
+		position: relative;
+		z-index: 10;
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+
+	input {
+		grid-area: cell;
+		margin: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 100;
+		cursor: pointer;
+		opacity: 0;
 	}
 }
