--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -41,7 +41,8 @@
 	min-width: 150px;
 }
 
-.videoOrigin, .videoOrigin * {
+.videoOrigin,
+.videoOrigin * {
 	visibility: hidden !important;
 	height: 0;
 }
