--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,12 @@ html {
 
 // END INTER FONT
 
+// START IVY JOURNAL FONT
+
+@import url('https://use.typekit.net/bgc2sqi.css');
+
+// END IVY JOURNAL FONT
+
 @import './common.scss';
 
 * {
