--- a/src/components/atoms/progressBar.module.scss
+++ b/src/components/atoms/progressBar.module.scss
@@ -36,7 +36,9 @@
 		width: 100%;
 		height: 100%;
 		z-index: 100;
-		cursor: pointer;
 		opacity: 0;
+		&:enabled {
+			cursor: pointer;
+		}
 	}
 }
