--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -8,16 +8,29 @@
 
 .hat {
 	background-color: $ts-cream;
-	padding: 1rem;
+	padding: 16px 24px;
 	display: block;
 	text-decoration: none;
+	.hatType {
+		font-size: 10px;
+		text-transform: uppercase;
+		letter-spacing: 1px;
+		font-weight: 700;
+		display: flex;
+		align-items: center;
+		svg {
+			margin-right: 4px;
+			color: $ts-red;
+		}
+	}
 	h4 {
 		margin: 0;
+		font-size: 16px;
 	}
 }
 
 .content {
-	padding: 1rem;
+	padding: 24px;
 	h1 {
 		margin-top: 0;
 		margin-bottom: 0.5rem;
@@ -43,6 +56,7 @@
 
 .sequenceNav {
 	overflow: hidden;
+	margin-bottom: 1rem;
 	.previous {
 		float: left;
 	}
