--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -1,10 +1,9 @@
 @import '../../styles/common';
 
-.base {
-	path {
-		stroke: $ts-dark;
-		fill: none;
-	}
+.part {
+	color: $ts-red;
+	font-weight: 600;
+	font-size: 10.5px;
 }
 
 .title {
@@ -14,6 +13,11 @@
 		font-size: 22px;
 		flex-grow: 1;
 		margin-top: 0;
+		margin-bottom: 0;
+	}
+	path {
+		stroke: $ts-dark;
+		fill: none;
 	}
 }
 
