adjust recording meta spacing; remove transcript section title

--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -40,6 +40,14 @@
 		font-weight: 700;
 		font-size: 44px;
 	}
+	h6 {
+		margin-top: 16px;
+		margin-bottom: 8px;
+	}
+	p {
+		margin-top: 8px;
+		margin-bottom: 16px;
+	}
 }
 
 .series {
