--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -38,6 +38,7 @@
 
 .meta {
 	padding: 2rem;
+	min-width: 0;
 }
 
 .series {
@@ -54,6 +55,9 @@
 	font-size: 18px;
 	margin-top: 0;
 	margin-bottom: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .volume {
