--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -64,4 +64,9 @@
 	display: flex;
 	align-items: center;
 	min-width: 150px;
+	svg {
+		flex: 0 0 auto;
+		box-sizing: content-box;
+		padding: 8px;
+	}
 }
