fix font weight

--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -44,7 +44,7 @@
 .series {
 	display: flex;
 	align-items: center;
-	font-weight: 400px;
+	font-weight: 400;
 	font-size: 12px;
 	svg {
 		color: $ts-red;
