--- a/src/components/organisms/miniplayer.module.scss
+++ b/src/components/organisms/miniplayer.module.scss
@@ -62,6 +62,19 @@
 	white-space: nowrap;
 }
 
+.progress {
+	display: flex;
+	align-items: center;
+	font-size: 14px;
+	font-weight: 400;
+	color: $ts-midTone;
+	.bar {
+		flex-grow: 1;
+		margin-left: 16px;
+		margin-right: 16px;
+	}
+}
+
 .volume {
 	display: flex;
 	align-items: center;
