--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -68,7 +68,7 @@ a {
 	color: inherit;
 
 	&:hover {
-		text-decoration: none;
+		color: $ts-red;
 	}
 }
 
@@ -104,6 +104,9 @@ p {
 	background-color: $ts-red;
 	color: white;
 	box-shadow: 0 4px 10px 0 #00000026;
+	font-size: 12px;
+	font-weight: 700;
+
 }
 
 .MuiSlider-root.MuiSlider-colorPrimary {
