--- a/src/components/molecules/card.module.scss
+++ b/src/components/molecules/card.module.scss
@@ -18,13 +18,14 @@
 	padding: 16px;
 	width: 100%;
 	font-size: 0.9em;
-	display: flex;
+	display: flex !important;
 	align-items: center;
 }
 
 .hatIcon {
 	margin-right: 0.3em;
 	color: var(--iconColor, #ff224a);
+	display: flex;
 }
 
 .hatTitle {
