--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,12 @@ html {
 
 // END IVY JOURNAL FONT
 
+// START normalize.css
+
+@import '../../node_modules/normalize.css/normalize.css';
+
+// END normalize.css
+
 @import './common.scss';
 
 * {
@@ -59,6 +65,18 @@ h4 {
 	font-family: $headingFont;
 }
 
+h1 {
+	font-size: 44px;
+	line-height: 48.4px;
+	margin-top: 0;
+	margin-bottom: 16px;
+}
+
+h2 {
+	font-size: 22px;
+	line-height: 24.2px;
+}
+
 h6 {
 	font-size: 10px;
 	text-transform: uppercase;
@@ -66,9 +84,11 @@ h6 {
 
 a {
 	color: inherit;
+	text-decoration: none;
 
 	&:hover {
 		color: $ts-red;
+		text-decoration: underline;
 	}
 }
 
