--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,7 +14,10 @@ $accent: #3da88e;
 $serif: ivyjournal, serif;
 $headingFont: $serif;
 
+$sans: 'Inter', 'system-ui', sans-serif;
+
 // T&S Named Colors
+$ts-white: #ffffff;
 $ts-cream: #efebeb;
 $ts-dark: #323e48;
 $ts-lightTone: #cdd9e3;
