--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,16 +14,6 @@
 @include default.all;
 @include variable.all;
 
-html {
-	font-family: 'Inter', 'system-ui', sans-serif;
-}
-
-@supports (font-variation-settings: normal) {
-	html {
-		font-family: 'Inter var', 'system-ui', sans-serif;
-	}
-}
-
 // END INTER FONT
 
 // START IVY JOURNAL FONT
@@ -39,6 +29,16 @@ html {
 // END normalize.css
 
 @import './common.scss';
+
+html {
+	font-family: $sans;
+}
+
+@supports (font-variation-settings: normal) {
+	html {
+		font-family: 'Inter var', 'system-ui', sans-serif;
+	}
+}
 
 * {
 	box-sizing: border-box;
@@ -79,7 +79,7 @@ h2 {
 
 h6 {
 	font-size: 10px;
-	text-transform: uppercase;
+	line-height: 12px;
 }
 
 a {
