--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -1,17 +1,7 @@
 @import '../../styles/common';
 
-.base {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	overflow: hidden;
-}
-
-.content {
-	flex: 1 1 0;
-	min-height: 0;
-	display: flex;
+.contentWithPlayer {
+	padding-bottom: $miniplayer-height;
 }
 
 .videoOrigin,
