--- a/src/components/organisms/header.module.scss
+++ b/src/components/organisms/header.module.scss
@@ -2,60 +2,13 @@
 
 .header {
 	overflow: hidden;
-	float: left;
-	padding: 1.5rem;
 	flex-direction: column;
 	h1 {
 		margin-top: 0;
-	}
-	ul {
-		padding-left: 0;
-	}
-	li {
-		list-style-type: none;
-		margin-bottom: 26px;
-		color: $ts-midTone;
-		font-size: 18px;
-		font-weight: 400;
-		display: flex;
-		align-items: center;
-		.icon {
-			margin-right: 8px;
-			display: flex;
-			* {
-				stroke: $ts-dark;
-			}
-			&.fill {
-				* {
-					fill: $ts-dark;
-				}
-			}
-		}
-		a {
-			text-decoration: none;
-			display: flex;
-			align-items: center;
-		}
-	}
-	li:hover,
-	a.active {
-		&,
-		a {
-			color: $ts-red;
-		}
-		.icon {
-			* {
-				stroke: $ts-red;
-			}
-			&.fill {
-				* {
-					fill: $ts-red;
-				}
-			}
-		}
+		margin-bottom: 0;
 	}
 }
 
-.logo {
-	margin-bottom: 2rem;
+.link {
+	display: flex;
 }
