--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -25,10 +25,13 @@ $ts-midTone: #6b7680;
 $ts-red: #ff224a;
 $ts-salmon: #ff6e6e;
 
-// $breakpoint-sm: 576px;
-$breakpoint-md: 768px;
-// $breakpoint-lg: 992px;
-// $breakpoint-xl: 1200px;
+$breakpoint-sm: 516px;
+$breakpoint-md: 664px;
+$breakpoint-lg: 894px;
+$breakpoint-xl: 1230px;
+
+$sidebar-width: 230px;
+$miniplayer-height: 90px;
 
 // TODO: Switch to using Mui button, move all these styles to global
 //  theme or global.css Mui customizations
