--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,16 +45,19 @@ html {
 }
 
 html {
+	height: 100%;
 	font-size: 14px;
+}
+
+body {
+	min-height: 100%;
 }
 
 html,
 body,
-#__next,
-.template-base {
+#__next {
 	padding: 0;
 	margin: 0;
-	height: 100vh;
 	color: $ts-dark;
 }
 
@@ -66,10 +69,16 @@ h4 {
 }
 
 h1 {
-	font-size: 44px;
-	line-height: 48.4px;
+	font-size: 22px;
+	line-height: 24.2px;
 	margin-top: 0;
 	margin-bottom: 16px;
+}
+@media (min-width: $breakpoint-lg) {
+	h1 {
+		font-size: 44px;
+		line-height: 48.4px;
+	}
 }
 
 h2 {
@@ -89,20 +98,6 @@ a {
 	&:hover {
 		color: $ts-red;
 		text-decoration: underline;
-	}
-}
-
-.template-base {
-	display: flex;
-
-	> *:first-child {
-		flex: 0 0 200px;
-		border-right: 0.5px solid $gray-bleached;
-	}
-
-	> * {
-		flex: 0 0 100%;
-		overflow: scroll;
 	}
 }
 
