--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -33,6 +33,11 @@ $breakpoint-xl: 1230px;
 $sidebar-width: 230px;
 $miniplayer-height: 90px;
 
+$tease-maxWidth-sm: 520px;
+$tease-maxWidth: 1500px;
+
+$grid-gap: 24px;
+
 // TODO: Switch to using Mui button, move all these styles to global
 //  theme or global.css Mui customizations
 .button {
