--- a/src/components/molecules/sponsorLockup.module.scss
+++ b/src/components/molecules/sponsorLockup.module.scss
@@ -3,8 +3,10 @@
 .container {
 	display: flex;
 	align-items: center;
-	margin-bottom: 16px;
-	> *:first-child {
-		margin-right: 4px;
-	}
+}
+
+.title {
+	margin-left: 4px;
+	font-size: 16px;
+	line-height: 19.36px;
 }
