--- a/src/components/molecules/searchBar.module.scss
+++ b/src/components/molecules/searchBar.module.scss
@@ -2,6 +2,13 @@
 
 .base {
 	display: flex;
+}
+
+.inner {
+	flex-grow: 1;
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 24px;
 	border-bottom: 0.5px solid $ts-lightTone;
 	font-family: $serif;
@@ -10,6 +17,7 @@
 	line-height: 33px;
 	color: $ts-dark;
 	letter-spacing: unset;
+	max-width: $tease-maxWidth;
 	> * {
 		flex-grow: 1;
 	}
