--- a/src/components/templates/andNavigation.module.scss
+++ b/src/components/templates/andNavigation.module.scss
@@ -28,13 +28,13 @@
 }
 
 .navigationShown {
-	animation: slide-in 0.3s forwards;
-	-webkit-animation: slide-in 0.3s forwards;
+	animation: slide-in 300ms forwards;
+	-webkit-animation: slide-in 300ms forwards;
 }
 
 .navigationHidden {
-	animation: slide-out 0.3s forwards;
-	-webkit-animation: slide-out 0.3s forwards;
+	animation: slide-out 300ms forwards;
+	-webkit-animation: slide-out 300ms forwards;
 }
 
 @keyframes slide-in {
