--- a/src/components/organisms/recording.module.scss
+++ b/src/components/organisms/recording.module.scss
@@ -34,10 +34,6 @@
 	> * {
 		padding: 24px;
 	}
-	h1 {
-		margin-top: 0;
-		margin-bottom: 0.5rem;
-	}
 	h6 {
 		margin-top: 16px;
 		margin-bottom: 8px;
@@ -64,6 +60,7 @@
 .speakers {
 	padding-left: 0;
 	margin-top: 0;
+	margin-bottom: 16px;
 	li {
 		display: inline-block;
 		margin-right: 1rem;
