--- a/src/containers/home.module.scss
+++ b/src/containers/home.module.scss
@@ -9,9 +9,16 @@
 }
 
 .nav {
+	display: flex;
+	align-items: center;
 	& > * {
-		margin-left: 1rem;
+		margin-left: 39px;
 	}
+}
+
+.divider {
+	align-self: stretch;
+	border-left: 1px solid $ts-midTone;
 }
 
 .posts {
