--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -30,6 +30,10 @@ $ts-darkened-white: #f8f8f8;
 $ts-darkened-cream: #e8e3e3;
 $ts-darkened-lightTone: #b5c4d1;
 $ts-darkened-dark: #232b32;
+$ts-darkened-smartPlaylistH: #e7e9ee;
+
+$ts-shadow-small-default: 0px 4px 10px rgba(0, 0, 0, 0.15);
+$ts-shadow-small-hover: 0px 4px 16px rgba(0, 0, 0, 0.3);
 
 $breakpoint-sm: 516px;
 $breakpoint-md: 664px;
