--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -125,6 +125,9 @@ a {
 		&.hover-bg--darkened-lightTone {
 			background-color: $ts-darkened-lightTone;
 		}
+		&.hover-bg--darkened-smartPlaylistH {
+			background-color: $ts-darkened-smartPlaylistH;
+		}
 	}
 }
 
