--- a/src/components/molecules/card/index.module.scss
+++ b/src/components/molecules/card/index.module.scss
@@ -1,7 +1,9 @@
+@import '../../../styles/common';
+
 .card {
 	display: flex;
 	border-radius: 16px;
-	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+	box-shadow: $ts-shadow-small-default;
 	overflow: hidden;
 	text-align: left;
 	> * {
